# android-backend

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_STATUS.md  PLAN.md  Package.resolved  Package.swift  README.md  ROADMAP.md  TASKS.md  TUTORIAL_BOOK.md  build.gradle.kts  consumer-rules.pro  gradle.properties  release-please-config.json  release-please-manifest.json  settings.gradle.kts
backends/gtk4/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
backends/gtk4/examples/: all_components.rs  canvas.rs  form.rs  shapes.rs
backends/gtk4/src/: app.rs  events.rs  lib.rs  renderer.rs
backends/gtk4/src/layout/: engine.rs  engine_renderer.rs  mod.rs  scroll.rs  stack.rs
backends/gtk4/src/widgets/: button.rs  canvas.rs  dynamic.rs  form.rs  general.rs  mod.rs  navigation.rs  shape.rs  text.rs
backends/web/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
backends/web/examples/: basic.rs  enhanced.rs
backends/web/src/: app.rs  element.rs  events.rs  lib.rs  renderer.rs
backends/web/src/widgets/: button.rs  form.rs  general.rs  layout.rs  media.rs  mod.rs  navigation.rs
cli/: Cargo.toml
cli/src/: cargo_config.rs  config.rs  create.rs  main.rs  run.rs  template.rs  util.rs
cli/src/commands/: init.rs  mod.rs  new.rs
cli/src/create/: android.rs  mod.rs  rust.rs  swift.rs  template.rs
cli/src/templates/: .gitignore.tpl  Cargo.toml.tpl  lib.rs.tpl
cli/src/templates/apple/: build-rust.sh.tpl
cli/templates/: gitignore  lib.rs
components/canvas/: Cargo.toml
components/canvas/examples/: basic_usage.rs
components/canvas/src/: canvas.rs  context.rs  lib.rs
components/form/: Cargo.toml  README.md
components/form/derive/: Cargo.toml  README.md
components/form/derive/src/: lib.rs
components/form/examples/: derive_test.rs  form_macro_test.rs
components/form/src/: lib.rs  secure.rs  slider.rs  stepper.rs  text_field.rs  toggle.rs
components/form/src/picker/: color.rs  date.rs  mod.rs  multi_date.rs
components/graphics/: Cargo.toml
components/graphics/src/: canvas.rs  context.rs  lib.rs  shader.rs  shape.rs  wgpu_view.rs
components/layout/: Cargo.toml  README.md
components/layout/src/: container.rs  core.rs  engine.rs  frame.rs  grid.rs  lib.rs  overlay.rs  padding.rs  scroll.rs  spacer.rs  stack.rs
components/layout/src/stack/: hstack.rs  vstack.rs  zstack.rs
components/media/: Cargo.toml  README.md
components/media/src/: image.rs  lib.rs  live.rs  photo.rs  picker.rs  url.rs  video.rs
components/navigation/: Cargo.toml  README.md
components/navigation/src/: lib.rs  search.rs  tab.rs
components/text/: Cargo.toml  README.md
components/text/src/: attributed.rs  font.rs  highlight.rs  lib.rs  link.rs  locale.rs  macros.rs  styled.rs  text.rs
core/: Cargo.toml  README.md
core/src/: animation.rs  color.rs  env.rs  extract.rs  handler.rs  id.rs  lib.rs  macros.rs  plugin.rs  resolve.rs  shape.rs  view.rs  views.rs
core/src/components/: anyview.rs  dynamic.rs  metadata.rs  mod.rs  native.rs
data/: Cargo.toml  (+1 more)
demo/: Cargo.toml  README.md
demo/apple/: build-rust.sh  rust_build_info.xcconfig
demo/apple/demo/: ContentView.swift  demoApp.swift
demo/apple/demo.xcodeproj/: project.pbxproj
demo/src/: lib.rs
ffi/: Cargo.toml  cbindgen.toml  generate_header.rs  waterui.h
ffi/src/: action.rs  animation.rs  array.rs  closure.rs  color.rs  lib.rs  macros.rs  reactive.rs  str.rs  ty.rs  views.rs
ffi/src/components/: button.rs  dynamic.rs  form.rs  layout.rs  link.rs  media.rs  mod.rs  navigation.rs  progress.rs  text.rs  wgpu_view.rs
kit/: Cargo.toml
kit/src/: lib.rs
plugins/i18n/: Cargo.toml
plugins/i18n/src/: lib.rs  std_on.rs
reactive/: Cargo.toml  README.md
reactive/src/: binding.rs  cache.rs  channel.rs  debug.rs  ext.rs  ffi.rs  lib.rs  mailbox.rs  map.rs  project.rs  stream.rs  utils.rs  watcher.rs  zip.rs
reactive/src/compute/: computed.rs
template/: Cargo.toml
template/src/: lib.rs
tutorial-book/: Cargo.toml  book.toml
tutorial-book/src/: 01-setup.md  02-first-app.md  03-views.md  04-environment.md  05-state.md  06-composition.md  07-events.md  08-layout.md  09-text.md  10-forms.md  10-media.md  11-forms.md  12-navigation.md  13-styling.md  14-animations.md  14-data.md  15-networking.md  15-plugins.md  15-suspense.md  16-memory.md  16-storage.md  17-platform.md  18-accessibility.md  19-embedded.md  19-internationalization.md  19-web.md  20-todo-app.md  22-chat-application.md  23-dashboard.md  23-testing.md  24-performance.md  25-deployment.md  26-troubleshooting.md  27-api-reference.md  28-migration.md  29-resources.md  Introduction.md  README.md  SUMMARY.md  best-practices.md  (+2 more)
tutorial-book/src/.obsidian/: workspace.json
tutorial-book/src/01-getting-start/: 01-setup.md  02-first-app.md
tutorial-book/src/02-core-concept/: 01-view.md  02-reactive.md  03-environment.md
tutorial-book/src/03-basic/: 01-conditional.md  02-layout.md  03-text.md  04-button.md  04-form.md  05-form.md  05-navigation.md  06-media.md  07-media.md  08-navigation.md
tutorial-book/src/04-advanced/: 01-animation.md  02-suspense.md  03-error-handling.md  04-plugin.md
tutorial-book/src/advanced/: 14-animations.md  2-animations.md  3-suspense.md  5-memory.md
tutorial-book/src/core-concepts/: 04-environment.md  05-state.md  1-environment.md  2-state.md  3-conditional.md  5-events.md
tutorial-book/src/getting-started/: 02-first-app.md  03-views.md  1-setup.md  2-first-app.md  3-views.md
tutorial-book/src/projects/: 2-media-player.md
tutorial-book/src/ui-building/: 09-text.md  2-text.md  3-forms.md
utils/color/: Cargo.toml  README.md
utils/color/src/: lib.rs
utils/color/tests/: conversions.rs
utils/str/: Cargo.toml  README.md  miri.toml  run_miri_tests.sh
utils/str/src/: impls.rs  lib.rs  main_value.rs  shared.rs
utils/task/: Cargo.toml  README.md
utils/task/src/: lib.rs  local_value.rs  main.rs  main_value.rs
utils/url/: Cargo.toml
utils/url/examples/: demo.rs
utils/url/src/: lib.rs
window/: Cargo.toml
window/src/: dialog.rs  lib.rs
(+285 files in other folders)
