
[workspace]
members = [
    "core",
    "kit", 
    "components/*",
    "utils/str",
    "backends/*", "render_utils"
]
resolver = "2"

[package]
name = "waterui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu"]
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/waterui-rs/waterui"
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"


[workspace.dependencies]
waterui-core = { path = "core" }
waterui-str = { path = "utils/str" }
waterui-text = { path = "components/text" }
waterui-media = { path = "components/media" }
waterui-form = { path = "components/form" }
waterui-canvas = { path = "components/canvas" }
native-executor = "0.1.0"
nami = { path = "../nami"}
waterui-layout = { path = "components/layout" }
waterui-navigation = { path = "components/navigation" }
waterui-gtk4 = { path = "backends/gtk4" }
waterui-web = { path = "backends/web" }
waterui-render-utils = { path = "render_utils" }
waterui = { path = "." }

serde = { version = "1.0", default-features = false }
typeshare = "1.0"

[dependencies]
nami.workspace = true
waterui-core.workspace = true
waterui-str.workspace = true
waterui-layout.workspace = true
waterui-text.workspace = true
waterui-media.workspace = true
waterui-navigation.workspace = true
waterui-form.workspace = true
waterui-canvas.workspace = true
native-executor.workspace = true
typeshare.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }


[features]
default = []
std = []
all = ["serde", "std"]
serde = ["dep:serde", "waterui-core/serde"]
