
[workspace]
members = [
    "core",
    "kit", 
    "components/*",
    "utils/*",
    # "backends/web",
    "render_utils",
    # "plugins/i18n", We need more thoughtful design about i18n...
    "window",
    "ffi",
    "cli"]
resolver = "2"

[package]
name = "waterui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu"]
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/water-rs/waterui"
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"



[workspace.dependencies]
executor-core = { version = "0.6.0", features = ["std"]}
nami = { version = "0.6.1" }
log = "0.4.28"
waterui-core = { version = "0.1.0", path = "core" }
waterui-str = { version = "0.2.0", path = "utils/str" }
waterui-url = { version = "0.1.0", path = "utils/url" }
waterui-color = { version = "0.1.0", path = "utils/color" }
waterui-text = { version = "0.1.0", path = "components/text" }
waterui-media = { version = "0.1.0", path = "components/media" }
waterui-form = { version = "0.1.0", path = "components/form" }
waterui-form-derive = { version = "0.1.0", path = "components/form/derive" }
waterui-graphics = { version = "0.1.0", path = "components/graphics" }
waterui-ffi = { version = "0.1.0", path = "ffi" }
waterui-layout = { version = "0.1.0", path = "components/layout" }
waterui-navigation = { version = "0.1.0", path = "components/navigation" }
waterui-gtk4 = { version = "0.1.0", path = "backends/gtk4" }
waterui-web = { version = "0.1.0", path = "backends/web" }
waterui-render-utils = { version = "0.1.0", path = "render_utils" }
waterui = { version = "0.1.0", path = "." }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
wgpu = "0.19"
time = "0.3"

[dependencies]
nami.workspace = true
waterui-core.workspace = true
waterui-str.workspace = true
waterui-layout.workspace = true
waterui-text.workspace = true
waterui-media.workspace = true
waterui-navigation.workspace = true
waterui-color.workspace = true
waterui-form.workspace = true
executor-core.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
log.workspace = true

[features]
default = []
std = []
all = ["serde", "std"]
serde = ["dep:serde", "waterui-core/serde"]


[lints]
workspace = true
