[package]
name = "waterui-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.4.4"
dialoguer = "0.11.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
which = "6.0.2"
