[package]
name = "waterui-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core functionality for the WaterUI framework"
keywords = ["ui", "core", "framework", "waterui"]
categories = ["gui"]

[dependencies]
waterui-str.workspace = true
waterui-reactive.workspace = true
waterui-task.workspace = true
paste = "1.0"

[dependencies.anyhow]
version = "1.0"
default-features = false

[dependencies.smol]
version = "2.0"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
[features]
default = []
std = []
serde = ["dep:serde", "waterui-str/serde"]
