[package]
name = "demo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A demo project of WaterUI"
keywords.workspace = true
categories.workspace = true

[dependencies]
waterui.workspace = true
waterui-ffi.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib","staticlib"]