[package]
name = "waterui-ffi"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"
description = "FFI bindings for the WaterUI cross-platform UI framework"
keywords = ["ffi", "ui", "framework", "gui", "cross-platform"]
categories = ["gui", "api-bindings"]

[dependencies]
waterui.workspace = true
waterui-core.workspace = true
waterui-text.workspace = true
waterui-form.workspace = true
waterui-navigation.workspace = true
waterui-media.workspace = true
cbindgen = { version = "0.29.0", optional = true }

[[bin]]
name = "generate_header"
path = "generate_header.rs"
required-features = ["cbindgen"]

[features]
default = []