[package]
name = "waterui-kit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Kit utilities and helpers for WaterUI"
keywords = ["kit", "utilities", "helpers", "waterui"]
categories = ["gui", "development-tools"]

[dependencies]
core-foundation = "0.10"

[lints]
workspace = true