[package]
name = "template"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
waterui.workspace = true
waterui-ffi.workspace = true

[lints]
workspace = true
