[package]
name = "waterui-tutorial-book"
version = "0.1.0"
edition = "2021"

# Tutorial book for testing code examples with real WaterUI

[dependencies]
# Real WaterUI dependencies from the workspace
waterui = { git = "https://github.com/water-rs/waterui"}
waterui_gtk = { git = "https://github.com/water-rs/waterui"}


# Common dependencies
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
async-trait = "0.1"

# Platform-specific dependencies for GTK4 backend
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gtk4 = "0.5"

# WASM dependencies for web examples
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
tokio-test = "0.4"