[package]
name = "waterui-gtk4"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "GTK4 backend for WaterUI framework"
keywords = ["ui", "framework", "rust", "gui", "gtk4"]
categories = ["gui"]

[dependencies]
waterui.workspace = true
waterui-render-utils.workspace = true
waterui-canvas.workspace = true
gtk4 = "0.10"
vello = "0.5"
glib = "0.21"
gdk4 = "0.10"
pango = "0.21"
time = "0.3"

[features]
default = []
