[package]
name = "waterui-web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Web backend for WaterUI framework"
keywords = ["ui", "framework", "rust", "gui", "web"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
waterui.workspace = true
waterui-render-utils.workspace = true
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlCollection",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "Text",
  "Window",
  "CssStyleDeclaration",
  "DomTokenList",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[features]
default = []