[package]
name = "waterui-form"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Form components for WaterUI (inputs, buttons, validation)"
keywords = ["form", "input", "validation", "ui", "components"]
categories = ["gui"]
exclude = ["examples/*"]


[dependencies]
time = "0.3.43"
waterui-core.workspace = true
waterui-layout.workspace = true
nami.workspace = true
waterui-text.workspace = true
waterui-form-derive = { version = "0.1.0", path = "derive" }
waterui-color.workspace = true
zeroize = { version = "1.8.1", default-features = false }
bcrypt = "0.17.1"
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "waterui-core/serde"]

[dev-dependencies]
serde_json = "1.0"
waterui.workspace = true

[lints]
workspace = true
