[package]
name = "waterui-graphics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
wgpu.workspace = true

[lints]
workspace = true
