[package]
name = "waterui-graphics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Graphic components for WaterUI"
keywords = ["graphics", "2d", "vello", "ui", "waterui"]
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
vello = { version = "0.1.0", features = ["wgpu"] }
kurbo = "0.11.0"
wgpu.workspace = true

[lints]
workspace = true
