[package]
name = "waterui-layout"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Layout components for WaterUI"
keywords = ["layout", "ui", "components", "flexbox"]
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
nami.workspace = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[features]
serde = ["dep:serde"]

[lints]
workspace = true