[package]
name = "waterui-media"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Media components for WaterUI (images, videos, audio)"
keywords = ["media", "image", "video", "ui", "components"]
categories = ["gui", "multimedia"]


[dependencies]
waterui-core.workspace = true
waterui-url.workspace = true
waterui-color.workspace = true
mime = "0.3.17"
image = "0.25.8"
blocking = "1.6.2"
base64 = "0.22.1"

[features]
default = ["media-picker", "std"]
media-picker = []
std = ["waterui-core/std"]


[lints]
workspace = true
