[package]
name = "waterui-i18n"
version = "0.1.0"
edition.workspace = true
author.workspace = true
license.workspace = true
readme = "README.md"
description = "A lightweight internationalization plugin for the WaterUI framework, providing text translation capabilities."
repository = "https://github.com/waterui/waterui"
keywords = ["waterui", "i18n", "internationalization", "translation", "locale"]
categories = ["gui", "localization"]
authors = ["WaterUI Team"]

[dependencies]
waterui-text.workspace = true

[dependencies.waterui-core]
workspace = true
features = ["serde"]

[dependencies.async-fs]
version = "2.1.2"
optional = true

[dependencies.futures-lite]
version = "2.3.0"
optional = true

[dependencies.thiserror]
version = "2.0"
optional = true


[dependencies.toml]
version = "0.8.19"
optional = true



[features]
default = ["std"]
std = ["async-fs","futures-lite","thiserror","toml"]

[lints]
workspace = true