[package]
name = "waterui-color"
description = "Color library for WaterUI"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["color", "graphics", "ui", "waterui"]
categories = ["graphics", "gui"]

[dependencies]
