[package]
name = "waterui-task"
description = "Task utilities for the WaterUI."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["task", "async", "concurrency", "waterui"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-task = "4.7.1"
futures-lite = "2.6"
spin = "0.10"

[target.'cfg(target_vendor = "apple")'.dependencies]
dispatch = "0.2.0"
